--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,23 @@
 atomicwrites==1.3.0
 attrs==18.2.0
 backcall==0.1.0
+certifi==2018.11.29
+chardet==3.0.4
 Click==7.0
 colorama==0.4.1
 decorator==4.3.2
 Flask==1.0.2
 Flask-SQLAlchemy==2.3.2
+httpie==1.0.2
+idna==2.8
 ipython==7.2.0
 ipython-genutils==0.2.0
 itsdangerous==1.1.0
 jedi==0.13.2
 Jinja2==2.10
+jsonschema==2.6.0
 MarkupSafe==1.1.0
+marshmallow==2.18.0
 more-itertools==5.0.0
 parso==0.3.2
 pickleshare==0.7.5
@@ -23,8 +29,12 @@ pytest==4.2.0
 pytest-flask==0.14.0
 pytest-flask-sqlalchemy==1.0.0
 pytest-mock==1.10.0
+requests==2.21.0
 six==1.12.0
 SQLAlchemy==1.2.17
+SQLAlchemy-Utils==0.33.11
 traitlets==4.3.2
+urllib3==1.24.1
 wcwidth==0.1.7
+webargs==5.1.1.post0
 Werkzeug==0.14.1
